bonus/confs/gitlab/gitlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: gitlab
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: gitlab
