bonus/confs/gitlab/gitlab-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: gitlab.iot.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gitlab-svc
            port:
              number: 80
